--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://scontent-cdg4-1.xx.fbcdn.net/v/t39.30808-6/319633282_5534864106610780_3559836110812714245_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=0b6b33&_nc_ohc=eIzMG2xrhdsQ7kNvgHM2AxY&_nc_zt=23&_nc_ht=scontent-cdg4-1.xx&_nc_gid=AueHoj41KIbzDO50CtZWBFc&oh=00_AYDjlZ9i5-0957NTf3kULoUAe00FIxfC4LuwHifUUDYQ7A&oe=6728938E'), url('https://example.com/construction-site.jpg');
+      background-image: url('https://github.com/LedZepper/Cadeaux_Noel_4QA/blob/main/319633282_5534864106610780_3559836110812714245_n.jpg?raw=true'), url('https://example.com/construction-site.jpg');
       background-size: cover;
       background-blend-mode: overlay;
       background-position: center;
